--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <button>Translate Text</button>
     </div>
   </div>
+  <div class="error-message"></div>
  <div class="social-media-icons">
     <ul>
         <li>
